--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,4 @@ en:
         failure: "There was a problem logging in with those credentials."
       destroy:
         success: "See you real soon. /mickey mouse voice"
+      unauthenticated: "Please sign in to view that page."
