--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,3 +23,6 @@ en:
       destroy:
         success: "That note has been deleted."
         failure: "We weren't able to delete that note."
+    placeholder:
+      title: "Your note's title..."
+      body: "Throw down some serious fire..."
